insertConfigDocumentsAsRetryableWrite() incorrectly calculates BSON array overhead

XMLWordPrintableJSON

    • Fully Compatible
    • v4.4, v4.2, v4.0
    • Sharding 2020-03-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When constructing an array of BSONObjs, the BSON array overhead should be added per element. Currently, it's only added once for the entire array. This ticket is to fix that bug.

            Assignee:
            Marcos José Grillo Ramirez
            Reporter:
            Blake Oler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: