SERVER-44463 insertConfigDocumentsAsRetryableWrite() incorrectly calculates BSON array overhead

(cherry picked from commit bb741a0ab1b2c80844dab55a3beecd83a8250ca4)